--- a/src/app/esportes/generico/listagem/generico-listagem.component.html
+++ b/src/app/esportes/generico/listagem/generico-listagem.component.html
@@ -81,7 +81,7 @@
         </div>
     </div>
 </div>
-<div #listagem class="content-sports content-sports-list" infiniteScroll (scrolled)="exibirMais()">
+<div #listagem class="content-sports content-sports-list" infiniteScroll (scrolled)="exibirMais()" (scroll)="layoutService.onPageScroll($event.target)">
     <app-banners [pagina]="esporte"></app-banners>
     <div class="wrap-sticky" *ngIf="!showLoadingIndicator">
 
