--- a/src/app/casino/wall-live/wall-live.component.css
+++ b/src/app/casino/wall-live/wall-live.component.css
@@ -625,6 +625,7 @@
     box-shadow: 0 -2px 0 var(--highlight) inset;
     justify-content: center;
     position: relative;
+    transition: min-height 150ms linear;
 }
 
 .submenu {
@@ -636,6 +637,7 @@
     scrollbar-width: none;
     /* Firefox */
     justify-content: center;
+    transition: height 150ms linear;
 }
 
 .submenu::-webkit-scrollbar {
