--- a/src/app/esportes/futebol/default/listagem/futebol-listagem.component.html
+++ b/src/app/esportes/futebol/default/listagem/futebol-listagem.component.html
@@ -167,7 +167,7 @@
         </div>
     </div>
 </div>
-<div #listagem class="content-sports content-sports-list" infiniteScroll (scrolled)="exibirMais()">
+<div #listagem id="futebol-listagem" class="content-sports content-sports-list" infiniteScroll (scrolled)="exibirMais()" (scroll)="layoutService.onPageScroll($event.target)">
     <app-banners></app-banners>
     <app-destaques (maisCotacoesDestaque)="maisCotacoes($event)" [jogosDestaque]="jogosDestaque"></app-destaques>
     <div class="wrap-sticky">
