--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -444,7 +444,7 @@ body .change-theme {
         width: 100%;
         height: 64px;
         display: flex;
-        border-bottom: 1px solid var(--foreground-header);
+        border-bottom: 1px solid rgba(var(--foreground-header-rgb), 0.1);
     }
 
     nav {
