--- a/src/app/shared/layout/submenu/submenu.component.css
+++ b/src/app/shared/layout/submenu/submenu.component.css
@@ -6,6 +6,7 @@
     box-shadow: 0 -2px 0 var(--highlight) inset;
     justify-content: center;
     position: relative;
+    transition: min-height 150ms linear;
 }
 
 .submenu {
@@ -14,6 +15,7 @@
     overflow-x: auto;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
+    transition: height 150ms linear;
 }
 
 .submenu::-webkit-scrollbar {
