--- a/src/app/shared/layout/submenu/submenu.component.html
+++ b/src/app/shared/layout/submenu/submenu.component.html
@@ -1,5 +1,5 @@
-<div class="submenu-container">
-    <nav class="submenu scroll" scrollX="true" *ngIf="active" [ngStyle]="{'width.px': menuWidth}"
+<div id="submenu-container" class="submenu-container">
+    <nav id="nav-submenu" class="submenu scroll" scrollX="true" *ngIf="active" [ngStyle]="{'width.px': menuWidth}"
          [ngClass]="{'centered': centered}"
          (scroll)="onScroll($event)" #scrollMenu>
         <div class="pull pull-left" (click)="scrollLeft()" [ngClass]="leftDisabled ? 'visibility':''" *ngIf="!isMobile">
