historico de transacoes no mobile

--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -2,7 +2,7 @@
     <a (click)="activeModal.dismiss('Cross click')" class="botao-esquerdo">
         <i class="fa fa-arrow-left"></i>
     </a>
-    <div class="titulo">{{'geral.saques' | translate}}</div>
+    <div class="titulo">{{'geral.saque' | translate}}</div>
     <div class="botao-direito"></div>
 </div>
 <div id="default-content">
