--- a/src/app/clientes/transacoes-historico/transacoes-historico.component.css
+++ b/src/app/clientes/transacoes-historico/transacoes-historico.component.css
@@ -58,6 +58,7 @@
     margin: 0 !important;
     border: none !important;
     padding: 0 !important;
+    position: absolute;
 }
 
 .custom-day {
@@ -121,4 +122,32 @@
 
 .table td.no-border{
     border-left: 0 !important;
+}
+
+@media only screen and (max-width: 1024px) {
+    #default-content {
+        padding: 20px;
+    }
+
+    .filtros {
+        flex-direction: column;
+        align-items: normal;
+        gap: 10px;
+    }
+
+    .filtros input, .filtros select {
+        margin-right: 0;
+    }
+
+    .filtros > input, .filtros .datepicker-group, .filtros select {
+        max-width: none;
+    }
+
+    .filtros button {
+        margin-top: 1rem !important;
+    }
+
+    .datepicker-group i {
+        right: 15px;
+    }
 }
