--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -346,7 +346,7 @@
                                 <span>
                                     <i class="fa fa-solid fa-money-bill-transfer"></i>
                                 </span>
-                                {{'geral.saques' | translate}}
+                                {{'geral.saque' | translate}}
                                 <span class="arrow-nav">
                                     <i class="fa-solid fa-angle-right"></i>
                                 </span>
@@ -355,7 +355,16 @@
                                 <span>
                                     <i class="fa fa-solid fa-money-bill-transfer"></i>
                                 </span>
-                                {{'geral.depositos' | translate}}
+                                {{'geral.deposito' | translate}}
+                                <span class="arrow-nav">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                </span>
+                            </a>
+                            <a (click)="openTransactionHistory()">
+                                <span>
+                                    <i class="fa fa-solid fa-money-bill-transfer"></i>
+                                </span>
+                                {{'geral.transactionHistory' | translate}}
                                 <span class="arrow-nav">
                                     <i class="fa-solid fa-angle-right"></i>
                                 </span>
