--- a/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.css
+++ b/src/app/home/widgets/jogos-aovivo/jogos-aovivo.component.css
@@ -117,11 +117,10 @@ owl-carousel-o {
     display: flex;
     flex-direction: column;
     overflow-x: scroll;
-    padding: 0 15px;
+    padding: 0 10px;
 }
 
 .jogo-destaque {
-    cursor: pointer;
     background: var(--game);
     color: var(--foreground-game);
     border: 1px solid var(--highlight);
@@ -155,12 +154,13 @@ owl-carousel-o {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-size: 11px;
+    font-size: 12px;
     /* ajuste fonte */
 }
 
 .jogos-destaque .jogo .time1 {
     display: flex;
+    gap: 5px;
     align-items: center;
     flex: 1;
 }
@@ -175,6 +175,7 @@ owl-carousel-o {
 
 .jogos-destaque .jogo .time2 {
     display: flex;
+    gap: 5px;
     align-items: center;
     flex: 1;
 }
@@ -191,7 +192,7 @@ owl-carousel-o {
     font-size: 20px;
 
     width: 6px;
-    margin: 0 10px;
+    margin: 0 5px;
 }
 
 .jogos-destaque .jogo-destaque-odds {
@@ -203,7 +204,7 @@ owl-carousel-o {
     color: var(--foreground-inputs-odds);
     border-radius: 2px;
     flex: 1;
-    font-size: 8px;
+    font-size: 12px;
     padding: 4.5px;
 
     display: flex;
@@ -211,6 +212,7 @@ owl-carousel-o {
     align-items: center;
 
     margin-left: 5px;
+    cursor: pointer;
 }
 
 .jogos-destaque .jogo-destaque-odds .jogo-destaque-odd.selecionado {
@@ -223,16 +225,17 @@ owl-carousel-o {
 }
 
 span.escudo img {
-    height: 20px;
-    width: 20px;
+    height: 32px;
+    width: 32px;
 }
 
 .info-minutos {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     font-size: 10px;
+    height: 14px;
 }
 
 .info-minutos label {
@@ -240,6 +243,7 @@ span.escudo img {
     color: white;
     padding: 2px 10px;
     border-radius: 5px;
+    margin-bottom: 2px;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -299,4 +303,12 @@ span.escudo img {
     .pull-right {
         right: 270px;
     }
+}
+
+@media (max-width: 385px) {
+
+    .jogo-destaque {
+        width: 300px;
+    }
+
 }
