--- a/src/app/home/bilhete/bilhete.component.css
+++ b/src/app/home/bilhete/bilhete.component.css
@@ -492,7 +492,13 @@ h4 {
 }
 
 @media only screen and (max-width: 1024px) {
-
+    .bilhete {
+        width: calc(100% - 20px);
+        bottom: 5px;
+        right: 10px;
+        border-radius: 5px;
+        overflow: hidden;
+    }
 
     section.pre-bilhete {
         height: 0 !important;
