transformar coluna chave pix em popover na listagem de saques recentes

--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.css
@@ -40,6 +40,8 @@
      border-top: 0;
      border-bottom: 1px solid var(--game);
      vertical-align: middle;
+     padding: 15px 10px;
+
  }
 
  .table td.no-border{
