--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -119,7 +119,6 @@
                 <tr>
                     <th></th>
                     <th>{{'geral.detalhes' | translate}}</th>
-                    <th>{{ 'geral.chavePix' | translate }}</th>
                     <th>{{'geral.status' | translate}}</th>
                     <th>{{'geral.valor' | translate}}</th>
                     <!-- <th></th> -->
@@ -128,8 +127,12 @@
                 <tbody>
                     <tr *ngFor="let saque of saques">
                         <td><img src="/assets/images/debito.svg" alt="image"></td>
-                        <td>{{'saques.saqueERegistrado' | translate}} {{ saque.data }}</td>
-                        <td>{{ formatarChavePix(saque.chavePix, saque.tipoChavePix) }}</td>
+                        <td>
+                            {{'saques.saqueERegistrado' | translate}} {{ saque.data }}
+                            <a class="info" *ngIf="saque.chavePix" placement="top" [ngbPopover]="formatarChavePix(saque.chavePix, saque.tipoChavePix)">
+                                <i class="fa fa-info"></i>
+                              </a>
+                        </td>
                         <td>
                           {{ saque.status }}
                           <a class="info" *ngIf="saque.observacao" placement="top" [ngbPopover]="saque.observacao">
