feat: add focus In and out events in search bar component

--- a/src/app/casino/wall/components/wall-search-bar/wall-search-bar.component.html
+++ b/src/app/casino/wall/components/wall-search-bar/wall-search-bar.component.html
@@ -5,6 +5,10 @@
         class="search-box__input"
         [placeholder]="placeholder"
         (keyup)="handleSearch($event)"
+        (focus)="handleFocusIn()"
+        (focusout)="handleFocusOut()"
+        [value]="term"
+        autocomplete="off"
     >
     <i
         class="fa fa-close search-box__icon--clear"
