feat: create games search component

--- a/src/app/casino/wall/components/wall-provider-card/wall-provider-card.component.html
+++ b/src/app/casino/wall/components/wall-provider-card/wall-provider-card.component.html
@@ -10,7 +10,7 @@
     <img
         class="provider-card__image"
         loading="lazy"
-        title="{{data.gameFornecedorExibicao}}"
-        src="../../../../../assets/images/providers/{{data.gameFornecedor}}.png"
+        [title]="data.gameFornecedorExibicao"
+        [src]="data.imagem"
     >
 </div>
